--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "drizzle-kit": "^0.30.0",
     "drizzle-orm": "^0.39.0",
     "lucide-react": "^0.544.0",
+    "nitro": "^3.0.1-alpha.1",
     "pg": "^8.11.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
